tests/suite/snapshots/suite__case_hs5t.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 13
- token: Break
  start:
    line: 0
    column: 13
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: ScalarBreak
  start:
    line: 1
    column: 0
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Separator
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Scalar
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 14
- token: Separator
  start:
    line: 2
    column: 14
  end:
    line: 2
    column: 15
- token: ScalarSpace
  start:
    line: 2
    column: 15
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Separator
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Scalar
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 14
- token: Break
  start:
    line: 3
    column: 14
  end:
    line: 4
    column: 0

