tests/suite/snapshots/suite__case_hu3p.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"  word1 word2\\r\\n  no: key\\r\\n\""
  start:
    index: 6
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 0

