tests/suite/snapshots/suite__case_hwv9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DocumentEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0

