tests/suite/snapshots/suite__case_j3bt.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Comment
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: CommentText
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 17
- token: Break
  start:
    line: 0
    column: 17
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 6
- token: MappingValue
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 7
- token: Separator
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: DoubleQuote
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: DoubleQuoted
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 17
- token: DoubleQuote
  start:
    line: 1
    column: 17
  end:
    line: 1
    column: 18
- token: Break
  start:
    line: 1
    column: 18
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 5
- token: MappingValue
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Separator
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: Literal
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: Break
  start:
    line: 2
    column: 8
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 15
- token: ScalarBreak
  start:
    line: 3
    column: 15
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 29
- token: ScalarBreak
  start:
    line: 4
    column: 29
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 3
- token: ScalarBreak
  start:
    line: 5
    column: 3
  end:
    line: 6
    column: 0

