tests/suite/snapshots/suite__case_j7vc.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: MappingValue
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Separator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Scalar
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Break
  start:
    line: 0
    column: 6
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Scalar
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 5
- token: MappingValue
  start:
    line: 3
    column: 5
  end:
    line: 3
    column: 6
- token: Separator
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: Scalar
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Break
  start:
    line: 3
    column: 8
  end:
    line: 4
    column: 0

