tests/suite/snapshots/suite__case_jef9_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Literal
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: ChompingIndicator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Break
  start:
    line: 0
    column: 4
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: ScalarBreak
  start:
    line: 1
    column: 0
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: ScalarBreak
  start:
    line: 2
    column: 0
  end:
    line: 3
    column: 0

